# cmake-exercise

./: CMakeLists.txt  Dockerfile  build_and_run.sh  main.cpp  yaml.sh
